nopeeking.github.io

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<link rel="stylesheet" href="style.css">
-<header>
-	<h1>Hello</h1>
-</header>
 
+<head>
+	<meta charset="UTF-8">
+
+<link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Roboto+Slab:400,700" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+</head>
 
 <body> 
-	<article>
+	<img class="top_img" src="https://thumbs.dreamstime.com/t/summer-beach-vacation-sunbed-umbrella-sand-tropical-banner-copy-space-flat-vector-illustration-70137038.jpg" alt="beach banner">
+	<header>
+<h1><a href="#">Hello</a></h1>
+
+</header>
+<I class="fa fa-camera-retro fa-5x"></i>
+	<article id="article1"> 
+	<p>m is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+</article>
+<article id="article2">
+	<a href="#" class="link2">2 link</a>
+	<p>m is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+</article>
+<article id="article3">
+	<a href="#" class="link3">Link 3</a>
 	<p>m is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
 </article>
 	
